History, Process, Distribution added, sections changed and bye pinos

--- a/mixologia.html
+++ b/mixologia.html
@@ -37,19 +37,25 @@
                 <a href="index.html">HOME</a>
               </li>
               <li>
-                <a href="/">NUESTRO PROCESO</a>
+                <a href="historia.html">HISTORIA</a>
               </li>
               <li>
-                <a href="#">HISTORIA</a>
+                <a href="proceso.html">NUESTRO PROCESO</a>
+              </li>
+              <li>
+                <a href="mezcales.html">MEZCALES</a>
               </li>
               <li>
                 <a href="#">VIVE MEZCAL</a>
               </li>
               <li>
+                <a href="mixologia.html">MIXOLOGÍA</a>
+              </li>
+              <li>
                 <a href="tienda.html">TIENDA</a>
               </li>
               <li>
-                <a href="mixologia.html">MIXOLOGÍA</a>
+                <a href="distribuidor.html">QUIERO SER DISTRIBUIDOR</a>
               </li>
             </ul>
           </nav>
@@ -60,7 +66,8 @@
 
   <div class="main-content">
     <section class="full-height-slider type-1">
-      <div class="bg ready data-jarallax" data-jarallax="5" style="background-image: url(images/mixology-bg.png);" data-swiper-parallax="50%">
+      <div class="bg ready data-jarallax" data-jarallax="5" style="background-image: url(images/mixology-bg.png);"
+        data-swiper-parallax="50%">
         <div class="black-overlay"></div>
         <div id="jarallax-container-0" style="position: absolute; top: 0px; left: 0px; overflow: hidden; pointer-events: none; transition: transform 0s linear -1ms, -webkit-transform 0s linear -1ms; visibility: hidden; z-index: -100;">
           <div style="background-position: 50% 50%; background-repeat: no-repeat; position: fixed; top: 0px; left: 0px; width: 1440px; height: 900px; overflow: hidden; pointer-events: none; transition: transform 0s linear -1ms, -webkit-transform 0s linear -1ms; background-size: 1440px 900px; visibility: visible; transform: translate3d(0px, 0px, 0px);"></div>
@@ -159,7 +166,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
                 </div>
@@ -188,7 +196,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
                 </div>
@@ -217,7 +226,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
                 </div>
@@ -246,7 +256,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
                 </div>
@@ -275,7 +286,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
                 </div>
@@ -304,7 +316,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
                 </div>
@@ -333,7 +346,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
                 </div>
@@ -362,7 +376,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
                 </div>
@@ -391,7 +406,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
                 </div>
@@ -420,7 +436,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
                 </div>
@@ -449,7 +466,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
                 </div>
@@ -478,7 +496,8 @@
                   </div>
                   <div class="empty-sm-15 empty-xs-10"></div>
                   <div class="simple-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                      labore
                       et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                   </div>
                 </div>
@@ -503,7 +522,9 @@
     <div class="copyright text-center">
       <div class="empty-sm-20 empty-xs-20"></div>
       <div class="container white">
-        <span><span class="love"><></span> with <span class="love">♥</span> by <a href="https://bluecamp.com.mx">BlueCamp</a></span>
+        <span><span class="love">
+            <>
+          </span> with <span class="love">♥</span> by <a href="https://bluecamp.com.mx">BlueCamp</a></span>
       </div>
       <div class="empty-sm-20 empty-xs-20"></div>
     </div>
