--- a/tienda.html
+++ b/tienda.html
@@ -34,8 +34,8 @@
           <div class="right-block">
             <div class="shop-card-item">
               <div class="shop-icon">
-                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 129 129" xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 129 129"
-                  width="16px" height="16px">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 129 129" xmlns:xlink="http://www.w3.org/1999/xlink"
+                  enable-background="new 0 0 129 129" width="16px" height="16px">
                   <g>
                     <g>
                       <path d="m109.1,36.8c-0.3-2-2-3.4-4-3.4h-23v-9.4c0-9.7-7.9-17.6-17.6-17.6-9.7,0-17.6,7.9-17.6,17.6v9.4h-23c-2,0-3.7,1.4-4,3.4l-13.4,81c-0.2,1.2 0.1,2.4 0.9,3.3 0.8,0.9 1.9,1.4 3.1,1.4h108c0,0 0,0 0.1,0 2.3,0 4.1-1.8 4.1-4.1 0-0.5-0.1-0.9-0.2-1.3l-13.4-80.3zm-54-12.8c0-5.2 4.2-9.4 9.4-9.4s9.4,4.2 9.4,9.4v9.4h-18.8v-9.4zm-39.8,90.4l12.1-72.8h19.5v22.9c0,2.3 1.8,4.1 4.1,4.1 2.3,0 4.1-1.8 4.1-4.1v-22.9h18.8v22.9c0,2.3 1.8,4.1 4.1,4.1 2.3,0 4.1-1.8 4.1-4.1v-22.9h19.5l12.1,72.8h-98.4z"></path>
@@ -48,8 +48,8 @@
               <div class="shop-card-list">
                 <div class="shop-card-align-mobile">
                   <div class="close-card-mobile main-fill-col">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 21.9 21.9"
-                      enable-background="new 0 0 21.9 21.9" width="18px" height="18px">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
+                      viewBox="0 0 21.9 21.9" enable-background="new 0 0 21.9 21.9" width="18px" height="18px">
                       <path d="M14.1,11.3c-0.2-0.2-0.2-0.5,0-0.7l7.5-7.5c0.2-0.2,0.3-0.5,0.3-0.7s-0.1-0.5-0.3-0.7l-1.4-1.4C20,0.1,19.7,0,19.5,0  c-0.3,0-0.5,0.1-0.7,0.3l-7.5,7.5c-0.2,0.2-0.5,0.2-0.7,0L3.1,0.3C2.9,0.1,2.6,0,2.4,0S1.9,0.1,1.7,0.3L0.3,1.7C0.1,1.9,0,2.2,0,2.4  s0.1,0.5,0.3,0.7l7.5,7.5c0.2,0.2,0.2,0.5,0,0.7l-7.5,7.5C0.1,19,0,19.3,0,19.5s0.1,0.5,0.3,0.7l1.4,1.4c0.2,0.2,0.5,0.3,0.7,0.3  s0.5-0.1,0.7-0.3l7.5-7.5c0.2-0.2,0.5-0.2,0.7,0l7.5,7.5c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l1.4-1.4c0.2-0.2,0.3-0.5,0.3-0.7  s-0.1-0.5-0.3-0.7L14.1,11.3z"
                         fill="#FFFFFF"></path>
                     </svg>
@@ -73,8 +73,9 @@
                       </div>
                       <div class="menu-price main-col">$450.00</div>
                       <div class="close-item main-fill-hover">
-                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="14px" height="14px" viewBox="0 0 64 64" xmlns:xlink="http://www.w3.org/1999/xlink"
-                          enable-background="new 0 0 64 64"><g>
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="14px" height="14px" viewBox="0 0 64 64"
+                          xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 64 64">
+                          <g>
                             <path fill="#1D1D1B" d="M28.941,31.786L0.613,60.114c-0.787,0.787-0.787,2.062,0,2.849c0.393,0.394,0.909,0.59,1.424,0.59   c0.516,0,1.031-0.196,1.424-0.59l28.541-28.541l28.541,28.541c0.394,0.394,0.909,0.59,1.424,0.59c0.515,0,1.031-0.196,1.424-0.59   c0.787-0.787,0.787-2.062,0-2.849L35.064,31.786L63.41,3.438c0.787-0.787,0.787-2.062,0-2.849c-0.787-0.786-2.062-0.786-2.848,0   L32.003,29.15L3.441,0.59c-0.787-0.786-2.061-0.786-2.848,0c-0.787,0.787-0.787,2.062,0,2.849L28.941,31.786z"></path>
                           </g>
                         </svg>
@@ -98,8 +99,9 @@
                       </div>
                       <div class="menu-price main-col">$450.00</div>
                       <div class="close-item main-fill-hover">
-                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="14px" height="14px" viewBox="0 0 64 64" xmlns:xlink="http://www.w3.org/1999/xlink"
-                          enable-background="new 0 0 64 64"><g>
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="14px" height="14px" viewBox="0 0 64 64"
+                          xmlns:xlink="http://www.w3.org/1999/xlink" enable-background="new 0 0 64 64">
+                          <g>
                             <path fill="#1D1D1B" d="M28.941,31.786L0.613,60.114c-0.787,0.787-0.787,2.062,0,2.849c0.393,0.394,0.909,0.59,1.424,0.59   c0.516,0,1.031-0.196,1.424-0.59l28.541-28.541l28.541,28.541c0.394,0.394,0.909,0.59,1.424,0.59c0.515,0,1.031-0.196,1.424-0.59   c0.787-0.787,0.787-2.062,0-2.849L35.064,31.786L63.41,3.438c0.787-0.787,0.787-2.062,0-2.849c-0.787-0.786-2.062-0.786-2.848,0   L32.003,29.15L3.441,0.59c-0.787-0.786-2.061-0.786-2.848,0c-0.787,0.787-0.787,2.062,0,2.849L28.941,31.786z"></path>
                           </g>
                         </svg>
@@ -124,19 +126,25 @@
                 <a href="index.html">HOME</a>
               </li>
               <li>
-                <a href="#">NUESTRO PROCESO</a>
+                <a href="historia.html">HISTORIA</a>
               </li>
               <li>
-                <a href="#">HISTORIA</a>
+                <a href="proceso.html">NUESTRO PROCESO</a>
+              </li>
+              <li>
+                <a href="mezcales.html">MEZCALES</a>
               </li>
               <li>
                 <a href="#">VIVE MEZCAL</a>
               </li>
               <li>
+                <a href="mixologia.html">MIXOLOGÍA</a>
+              </li>
+              <li>
                 <a href="tienda.html">TIENDA</a>
               </li>
               <li>
-                <a href="mixologia.html">MIXOLOGÍA</a>
+                <a href="distribuidor.html">QUIERO SER DISTRIBUIDOR</a>
               </li>
             </ul>
           </nav>
@@ -147,7 +155,8 @@
 
   <div class="main-content">
     <section class="full-height-slider type-1">
-      <div class="bg ready data-jarallax" data-jarallax="5" style="background-image: url(images/shop-bg.png);" data-swiper-parallax="50%">
+      <div class="bg ready data-jarallax" data-jarallax="5" style="background-image: url(images/shop-bg.png);"
+        data-swiper-parallax="50%">
         <div class="black-overlay"></div>
         <div id="jarallax-container-0" style="position: absolute; top: 0px; left: 0px; overflow: hidden; pointer-events: none; transition: transform 0s linear -1ms, -webkit-transform 0s linear -1ms; visibility: hidden; z-index: -100;">
           <div style="background-position: 50% 50%; background-repeat: no-repeat; position: fixed; top: 0px; left: 0px; width: 1440px; height: 900px; overflow: hidden; pointer-events: none; transition: transform 0s linear -1ms, -webkit-transform 0s linear -1ms; background-size: 1440px 900px; visibility: visible; transform: translate3d(0px, 0px, 0px);"></div>
@@ -164,7 +173,8 @@
                     <div class="empty-sm-30"></div>
                     <div class="col-md-10 col-md-offset-1">
                       <div class="simple-text md">
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                          pariatur.</p>
                       </div>
                     </div>
                   </div>
@@ -202,7 +212,8 @@
                 <div class="vertical-align full menu-button">
                   <a href="#" class="page-button button-style-1 type-4"><span class="txt">Añadir al carrito</span></a>
                   <div class="empty-sm-10 empty-xs-10"></div>
-                  <a href="tienda/detalle.html" class="page-button button-style-1 type-4"><span class="txt">Ver detalles</span></a>
+                  <a href="tienda/detalle.html" class="page-button button-style-1 type-4"><span class="txt">Ver
+                      detalles</span></a>
                   <div class="empty-sm-10 empty-xs-10"></div>
 
                 </div>
@@ -212,7 +223,8 @@
                 <h5 class="h5 caption"><a href="#" class="link-hover-line">Mezcal Cuero Viejo</a></h5>
                 <div class="empty-sm-5 empty-xs-5"></div>
                 <div class="simple-text">
-                  <p>Lorem ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor
+                  <p>Lorem ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum
+                    dolor
                     sit amet ipsum dolor sit amet</p>
                 </div>
                 <div class="menu-price style-2 title main-col">$450.00 mxn</div>
@@ -227,7 +239,8 @@
                 <div class="vertical-align full menu-button">
                   <a href="#" class="page-button button-style-1 type-4"><span class="txt">Añadir al carrito</span></a>
                   <div class="empty-sm-10 empty-xs-10"></div>
-                  <a href="tienda/detalle.html" class="page-button button-style-1 type-4"><span class="txt">Ver detalles</span></a>
+                  <a href="tienda/detalle.html" class="page-button button-style-1 type-4"><span class="txt">Ver
+                      detalles</span></a>
                   <div class="empty-sm-10 empty-xs-10"></div>
 
                 </div>
@@ -237,7 +250,8 @@
                 <h5 class="h5 caption"><a href="#" class="link-hover-line">Mezcal Cuero Viejo</a></h5>
                 <div class="empty-sm-5 empty-xs-5"></div>
                 <div class="simple-text">
-                  <p>Lorem ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor
+                  <p>Lorem ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum
+                    dolor
                     sit amet ipsum dolor sit amet</p>
                 </div>
                 <div class="menu-price style-2 title main-col">$450.00 mxn</div>
@@ -252,7 +266,8 @@
                 <div class="vertical-align full menu-button">
                   <a href="#" class="page-button button-style-1 type-4"><span class="txt">Añadir al carrito</span></a>
                   <div class="empty-sm-10 empty-xs-10"></div>
-                  <a href="tienda/detalle.html" class="page-button button-style-1 type-4"><span class="txt">Ver detalles</span></a>
+                  <a href="tienda/detalle.html" class="page-button button-style-1 type-4"><span class="txt">Ver
+                      detalles</span></a>
                   <div class="empty-sm-10 empty-xs-10"></div>
 
                 </div>
@@ -262,7 +277,8 @@
                 <h5 class="h5 caption"><a href="#" class="link-hover-line">Mezcal Cuero Viejo</a></h5>
                 <div class="empty-sm-5 empty-xs-5"></div>
                 <div class="simple-text">
-                  <p>Lorem ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor
+                  <p>Lorem ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum dolor sit amet ipsum
+                    dolor
                     sit amet ipsum dolor sit amet</p>
                 </div>
                 <div class="menu-price style-2 title main-col">$450.00 mxn</div>
@@ -287,7 +303,9 @@
     <div class="copyright text-center">
       <div class="empty-sm-20 empty-xs-20"></div>
       <div class="container white">
-        <span><span class="love"><></span> with <span class="love">♥</span> by <a href="https://bluecamp.com.mx">BlueCamp</a></span>
+        <span><span class="love">
+            <>
+          </span> with <span class="love">♥</span> by <a href="https://bluecamp.com.mx">BlueCamp</a></span>
       </div>
       <div class="empty-sm-20 empty-xs-20"></div>
     </div>
